[DESIGN][CORRECTION] aligne la charte plus au centre

--- a/mon-aide-cyber-ui/src/assets/styles/_charte.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_charte.scss
@@ -1,9 +1,5 @@
-.mac-entete-charte {
-  padding: 32px 0 16px 102px;
-}
-
-.mac-contenu-charte {
-  padding: 0 102px 0 102px;
+#top {
+  margin-top: 3rem;
 }
 
 .mac-contenu-charte h3 {
